--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
     ports:
       - "8081:8081"
+    command: java -jar /app/myapp.jar
